# bechmark_java_go

./: BENCHMARK_GO_VS_RUST.md  BENCHMARK_GO_locust.md  BENCHMARK_JAVA24_VS_GO.md  BENCHMARK_JAVA_locust.md  BENCHMARK_K6_COMPARISON.md  BENCHMARK_LETTUCE_VS_GO.md  Makefile  README.md  docker-compose.yml
go-service/: Dockerfile  go.mod  main.go
go-service/proto/: kv.pb.go  kv_grpc.pb.go
go-service/server/: kv_server.go
grafana/dashboards/: kv-benchmark.json
grafana/provisioning/dashboards/: dashboards.yml
java-service/: Dockerfile  pom.xml
java-service/src/main/java/com/benchmark/: KVServiceImpl.java  Main.java  RedisStore.java  VeniceStore.java
k6/: go.js  java.js  rust.js
locust/: Dockerfile  locustfile.py  locustfile_go.py  locustfile_java.py  requirements.txt
mysql/: init.sql
prometheus/: prometheus.yml
proto/: kv.proto
redis-init/: seed.py
rust-service/: Cargo.toml  Dockerfile  build.rs
rust-service/src/: main.rs
