[package]
name = "rust-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-service"
path = "src/main.rs"

[dependencies]
tonic          = "0.12"
prost          = "0.13"
tokio          = { version = "1", features = ["full"] }
deadpool-redis = { version = "0.15", features = ["rt_tokio_1"] }
redis          = { version = "0.25", features = ["aio", "tokio-comp"] }
prometheus     = { version = "0.13", features = ["process"] }
axum           = "0.7"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
